  * data/fields/name_section_mappings:
    + [CL] Ensure that NSS (Name Services Switch) modules are placed in the
      "admin" section. Thanks to Mathieu Parent (sathieu) for the patch.
      (Closes: #886961)
  * data/rules/rules-should-not-use:
    + [CL] Include the assigned value in the Lintian output for the
      debian-rules-should-not-use-DH_EXTRA_ADDONS tag.

 -- Chris Lamb <lamby@debian.org>  Tue, 09 Jan 2018 20:55:21 +0530

lintian (2.5.68) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - dh-quilt-addon-but-quilt-source-format
      - orphaned-package-not-maintained-in-debian-infrastructure
      - package-contains-python-hypothesis-example
      - should-specify-rules-requires-root
      - vcs-deprecated-in-debian-infrastructure

  * checks/changelog-file.pm:
    + [FL] Fix version parsing for hyphen in upstream versions.
  * checks/cruft.pm:
    + [CL] Avoid a false-positive reported by Theppitak Karoonboonyanan
      when matching autotools-pkg-config-macro-not-cross-compilation-safe
      by skipping comment lines.  (Closes: #886297)
    + [FL] Fix version parsing for native packages.
  * checks/control-file.{desc.pm}:
    + [CL] Check for packages that should specify Rules-Require-Root.
      (Closes: #886479)
  * checks/debconf.pm:
    + [CL] Don't warn about unknown template type "entropy" when a package
      depends on cdebconf.  (Closes: #677870)
  * checks/debhelper.{desc,pm}:
    + [CL] Add a check for packages that specify "dh --with quilt" but use
      the "3.0 (quilt)" source format. Thanks to Mattia Rizzolo for the
      idea.  (Closes: #886566)
  * checks/fields.pm:
    + [CL] Warn about orphaned packages that are not maintained in the
      Debian infrastucture.  (Closes: #886057)
    + [CL] Emit pedantic warnings for packages that refer to a non-Git
      version control systems hosted in the Debian infrastructure for the
      upcoming salsa.debian.org migration.  (Closes: #885974)