@@ -1,0 +1,5 @@
+Testname: rules-overeager-compression
+Version: 1.0
+Description: Test for over-eager tarball compression
+Test-For:
+ xz-compression-level-too-high
