@@ -1,0 +1,2 @@
+W: rules-overeager-compression source: xz-compression-level-too-high 9 (line 7)
+W: rules-overeager-compression source: xz-compression-level-too-high 9 (line 8)
